--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque itaque architecto adipisci facere distinctio sed in sunt vel qui corrupti quia, non totam? Voluptate architecto molestias esse eius doloribus corrupti aperiam ad?</p>
+        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, Javascript, HTML, Git CSS, and Bootstrap.</p>
 
         <div class="btn-box">
             <a href="#"class="btn">Hire ME</a>
@@ -66,9 +66,9 @@
     <div class="about-content">
         <h3>Frontend Developer!
         </h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ab non commodi aut doloribus, sint ad omnis assumenda, accusamus quod laboriosam minus. Earum autem ut quasi fugiat dolor. Blanditiis explicabo quis facilis suscipit ipsa quam enim numquam quidem tempora quisquam? Eveniet autem neque consequatur. Modi omnis deserunt vitae labore neque.</p>
+        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, Javascript, HTML, Git CSS, and Bootstrap.</p>
         <div class="btn-box btns">
-            <a href="#" class="btn">rRead More</a>
+            <a href="#" class="btn">Read More</a>
         </div>
     </div>
 </section>
@@ -84,24 +84,24 @@
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
                     </div>
-                    <h3>Bachelor degree - University</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3>Bachelor degree - University Sindh</h3>
+                    <p>junior frontend devloper</p>
                 </div>
             </div>
             <div class="education-content">
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
                     </div>
-                    <h3>Bachelor degree - University</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3>BA - Allama iqbal open University</h3>
+                    <p>BA from Allama iqbal open University </p>
                 </div>
             </div>
             <div class="education-content">
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023
                     </div>
-                    <h3>Bachelor degree - University</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3>Bachelor degree -Sindh Agriculture University</h3>
+                    <p>Bachlor form SAU</p>
                 </div>
             </div>
             </div>
@@ -115,15 +115,15 @@
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
                     </div>
-                    <h3>Web devloper - Company</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3>Web devloper - basit ali copration</h3>
+                    <p>role js divloper react divloper and css/bootstrap html css</p>
                 </div>
             </div>
             <div class="education-content">
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
                     </div>
-                    <h3>Web devloper - Company</h3>
+                    <h3> Frontend Web devloper - Selani Groups </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
                 </div>
             </div>
