--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
-        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, Javascript, HTML, Git CSS, and Bootstrap.</p>
+        <p>Hi! I'm Abdul Rehman, a proficient Frontend Developer specializing in React.js, JavaScript (including vanilla), typescript, HTML, CSS, Bootstrap, Git, and GitHub. 👋</p>
 
         <div class="btn-box">
             <a href="#"class="btn">Hire ME</a>
@@ -46,9 +46,9 @@
         </div>
     </div>
 <div class="home-sci">
-    <a href=""><i class='bx bxl-facebook' ></i></a>
-    <a href=""><i class='bx bxl-twitter' ></i></a>
-    <a href=""><i class='bx bxl-linkedin' ></i></a>
+    <a href="https://www.facebook.com/abdulrehman.nizamani.988/"><i class='bx bxl-facebook' ></i></a>
+    <a href="https://x.com/UstadFrom?t=ntunmSWxjvH1AwnNiAxy_g&s=09"><i class='bx bxl-twitter' ></i></a>
+    <a href="https://www.linkedin.com/in/abdulrehman-nizamani-772654193/"><i class='bx bxl-linkedin' ></i></a>
 </div>
 <div class="home-imgHover"></div>
 
@@ -78,16 +78,6 @@
     <div class="education-row">
         <div class="education-column">
             <h3 class="title">Education</h3>
-
-            <div class="education-box">
-            <div class="education-content">
-                <div class="content">
-                    <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
-                    </div>
-                    <h3>Bachelor degree - University Sindh</h3>
-                    <p>junior frontend devloper</p>
-                </div>
-            </div>
             <div class="education-content">
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
@@ -118,23 +108,6 @@
                     <h3>Web devloper - basit ali copration</h3>
                     <p>role js divloper react divloper and css/bootstrap html css</p>
                 </div>
-            </div>
-            <div class="education-content">
-                <div class="content">
-                    <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
-                    </div>
-                    <h3> Frontend Web devloper - Selani Groups </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
-                </div>
-            </div>
-            <div class="education-content">
-                <div class="content">
-                    <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023
-                    </div>
-                    <h3>Web devloper - Company</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
-                </div>
-            </div>
             </div>
         </div>
 
