--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="heading">About <span>Me</span></h2>
 
     <div class="about-img">
-        <img src="https://www.simpleimageresizer.com/_uploads/photos/28a20450/jj_260x348.png" alt="">
+        <img src="https://i.postimg.cc/HL5KNw9k/Screenshot-30.png" alt="">
         <span class="circle spin"></span>
     </div>
     <div class="about-content">
@@ -84,7 +84,7 @@
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
                     </div>
-                    <h3>Bachelor degree - University Sindh</h3>
+                    <h3>front-End web dev certification - meta via coursaria</h3>
                     <p>junior frontend devloper</p>
                 </div>
             </div>
@@ -131,8 +131,8 @@
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023
                     </div>
-                    <h3>Web devloper - Company</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3>react devloper - khadim and sons</h3>
+                    <p>i was react devloper there. my job was to build landing pages usong react </p>
                 </div>
             </div>
             </div>
@@ -186,7 +186,7 @@
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>material Ui <span>30%</span></h3>
+                        <h3>communication <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
 <!-- footer design -->
 <footer class="footer">
     <div class="footer-text">
-    <p>Copyright &copy; 2023 by AbdulRehman | All Right Riserved</p>
+    <p>Copyright &copy; 2024 by AbdulRehman | All Right Riserved</p>
 </div>
 
 <div class="footer-iconTop">
