--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="heading">About <span>Me</span></h2>
 
     <div class="about-img">
-        <img src="https://i.postimg.cc/HL5KNw9k/Screenshot-30.png" alt="">
+        <img src="https://i.postimg.cc/pL8rsS4h/zoomed.jpg" alt="image load error">
         <span class="circle spin"></span>
     </div>
     <div class="about-content">
@@ -123,8 +123,8 @@
                 <div class="content">
                     <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
                     </div>
-                    <h3> Frontend Web devloper - Selani Groups </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error cupiditate dolorum recusandae! Repellendus natus tempora nostrum odit, asperiores dolore expedita nesciunt perferendis similique architecto voluptas? Quaerat quo culpa cum ut quis.</p>
+                    <h3> Frontend Web developer - Selani Groups </h3>
+                    <p>i was volunteer there as a Front-End web developer </p>
                 </div>
             </div>
             <div class="education-content">
