--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
-        <p>Hi! I'm Abdul Rehman, a proficient Frontend Developer specializing in React.js, JavaScript (including vanilla), typescript, HTML, CSS, Bootstrap, Git, and GitHub. 👋</p>
+        <p>Hi! I'm Abdul Rehman, a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, HTML, CSS, Bootstrap, Git, and GitHub. 👋</p>
 
         <div class="btn-box">
-            <a href="#"class="btn">Hire ME</a>
-            <a href="#"class="btn">Let's Talk</a>
+            <a href="https://wa.me/qr/L336T7XCUQYVL1"class="btn">Hire ME</a>
+            <a href="https://wa.me/qr/L336T7XCUQYVL1"class="btn">Let's Talk</a>
         </div>
     </div>
 <div class="home-sci">
