--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
-        <p>Hi! I'm Abdul Rehman, a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, HTML, CSS, Bootstrap, Git, and GitHub. 👋</p>
+        <p>Hi! I'm Abdul Rehman, a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, three.js HTML, CSS, Bootstrap, tailwind CSS, Git, and GitHub. 👋</p>
 
         <div class="btn-box">
             <a href="https://wa.me/qr/L336T7XCUQYVL1"class="btn">Hire ME</a>
@@ -66,7 +66,7 @@
     <div class="about-content">
         <h3>Frontend Developer!
         </h3>
-        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, Javascript, HTML, Git CSS, and Bootstrap.</p>
+        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, three.js, Javascript, HTML, CSS, git, tailwind CSS, and Bootstrap.</p>
         <div class="btn-box btns">
             <a href="#" class="btn">Read More</a>
         </div>
@@ -174,11 +174,11 @@
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>web Design <span>85%%</span></h3>
+                        <h3>web Design <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>Web Development <span>70%</span></h3>
+                        <h3>Web Development <span>80%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
