--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
-        <p>Hi! I'm Abdul Rehman, a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, three.js HTML, CSS, Bootstrap, tailwind CSS, Git, and GitHub. 👋</p>
+        <p>
+Greetings i am a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, three.js HTML, CSS, Bootstrap, tailwind CSS, Git, and GitHub.<strong> Client satisfaction is my success </strong> </p>
 
         <div class="btn-box">
             <a href="https://wa.me/qr/L336T7XCUQYVL1"class="btn">Hire ME</a>
@@ -66,7 +67,7 @@
     <div class="about-content">
         <h3>Frontend Developer!
         </h3>
-        <p>👋 Hello! I'm Abdul Rehman a Frontend Developer with expertise in React.js, three.js, Javascript, HTML, CSS, git, tailwind CSS, and Bootstrap.</p>
+        <p>👋Greetings i am a proficient front-end developer specializing in React.js, JavaScript (including vanilla), typescript, three.js HTML, CSS, Bootstrap, tailwind CSS, Git, and GitHub.<strong> Client satisfaction is my success </strong> </p>
         <div class="btn-box btns">
             <a href="#" class="btn">Read More</a>
         </div>
@@ -116,7 +117,7 @@
                     <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
                     </div>
                     <h3>Web devloper - basit ali copration</h3>
-                    <p>role js divloper react divloper and css/bootstrap html css</p>
+                    <p>role js developer react developer and CSS/bootstrap html css</p>
                 </div>
             </div>
             <div class="education-content">
@@ -124,7 +125,7 @@
                     <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021
                     </div>
                     <h3> Frontend Web developer - Selani Groups </h3>
-                    <p>i was volunteer there as a Front-End web developer </p>
+                    <p> I was a volunteer there as a Front-End web developer </p>
                 </div>
             </div>
             <div class="education-content">
@@ -132,7 +133,7 @@
                     <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023
                     </div>
                     <h3>react devloper - khadim and sons</h3>
-                    <p>i was react devloper there. my job was to build landing pages usong react </p>
+                    <p>i was react devloper there. my job was to build landing pages using react </p>
                 </div>
             </div>
             </div>
@@ -158,11 +159,16 @@
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>JavaScript <span>60%</span></h3>
+                        <h3>JavaScript <span>70%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>Python <span>30%</span></h3>
+                        <h3>React.js <span>80%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+                </div>
+                <div class="progress">
+                        <h3>Git & Github <span>80%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -189,6 +195,14 @@
                         <h3>communication <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
+                    
+                </div>
+                  </div>
+                    <div class="progress">
+                        <h3>UI/UX<span>85%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
