--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@ Greetings i am a proficient front-end developer specializing in React.js, JavaSc
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>HTML <span>90%</span></h3>
+                        <h3>HTML,CSS <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>CSS <span>80%</span></h3>
+                        <h3> Git & Github<span>80%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
@@ -163,15 +163,9 @@ Greetings i am a proficient front-end developer specializing in React.js, JavaSc
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>React.js <span>80%</span></h3>
+                        <h3>React.js & Three.js <span>80%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
-                </div>
-                <div class="progress">
-                        <h3>Git & Github <span>80%</span></h3>
-                        <div class="bar"><span></span></div>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -180,7 +174,7 @@ Greetings i am a proficient front-end developer specializing in React.js, JavaSc
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>web Design <span>90%</span></h3>
+                        <h3>web Design/ UI/UX <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
@@ -192,18 +186,13 @@ Greetings i am a proficient front-end developer specializing in React.js, JavaSc
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>communication <span>90%</span></h3>
+                        <h3>communication/soft skills <span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     
                 </div>
                   </div>
-                    <div class="progress">
-                        <h3>UI/UX<span>85%</span></h3>
-                        <div class="bar"><span></span></div>
-                    </div>
-                    
-                </div>
+
             </div>
         </div>
 
