--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="home-content">
         <h1>Hi, I'm <span>AbdulRehman</span></h1>
         <div class="text-animate">
-            <h3>Frontend Developer</h3>
+            <h3>Russian to urdu interpreter</h3>
         </div>
         <p>
 i am  Russian-to-Urdu and Russian-to-English interpreter, making communication smooth and accurate with fluency in both languages.<strong> Client satisfaction is my success </strong> </p>
@@ -80,16 +80,7 @@ i am  Russian-to-Urdu and Russian-to-English interpreter, making communication s
         <div class="education-column">
             <h3 class="title">Education</h3>
 
-            <div class="education-box">
-            <div class="education-content">
-                <div class="content">
-                    <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020
-                    </div>
-                    <h3>front-End web dev certification - meta via coursaria</h3>
-                    <p>junior frontend devloper</p>
-                </div>
-            </div>
-            </div>
+          
             </div>
             </div>
         </div>
@@ -109,11 +100,11 @@ i am  Russian-to-Urdu and Russian-to-English interpreter, making communication s
     <h2 class="heading">My <span>Skills</span></h2>
     <div class="skills-row">
         <div class="skills-column">
-            <h3 class="title">Coding skills</h3>
+            <h3 class="title">live interpreter</h3>
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>HTML,CSS <span>90%</span></h3>
+                        <h3>russian language<span>90%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
